tests/samples/send-carousel-with-bad-syntax.err
send-carousel-with-bad-syntax.flow:9:Syntax error. "get_rooms *and title\n".
