tests/samples/send-carousel-with-bad-syntax.flow
carousel rooms:
  set title room_name,
  set description room_email,
  set image_url room_picture
end

dialog onboarding do
  call my_integration.get_rooms()
  show rooms using $my_integration.get_rooms and title
done
